@@ -1635,6 +1635,14 @@ test wm-withdraw-3.1 {} {
     lappend result [wm state .t] [winfo ismapped .t]
 } {withdrawn 0 normal 1}
 
+test wm-deletion-epoch-1.1 {Deletion epoch on multiple displays} {altDisplay} {
+    # See Tk Bug #671330 "segfault when e.g. deiconifying destroyed window"
+    deleteWindows
+    set w [toplevel .t -screen $env(TK_ALT_DISPLAY)]
+    wm deiconify $w         ;# this caches the WindowRep
+    destroy .t
+    list [catch {wm deiconify $w} msg] $msg
+} {1 {bad window path name ".t"}}
 
 # FIXME:
 
